# secret-rotator

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
config/: config.example.yaml  config.yaml
data/: secrets.json
docker/: entrypoint.sh
docs/: BACKUP_ARCHITECTURE.md  BACKUP_QUICK_REFERENCE.md  DOCKER_QUICKSTART.md
src/: backup_manager.py  encryption_manager.py  key_backup_manager.py  main.py  plugin_system.py  rotation_engine.py  scheduler.py  secret_access.py  setup_wizard.py  web_interface.py
src/config/: settings.py
src/providers/: base.py  file_provider.py
src/rotators/: advanced_rotators.py  base.py  password_rotator.py
src/secret_rotator/: __init__.py  backup_manager.py  cli.py  encryption_manager.py  key_backup_manager.py  main.py  plugin_system.py  rotation_engine.py  scheduler.py  secret_access.py  setup_wizard.py  version.py  web_interface.py
src/secret_rotator/providers/: __init__.py  file_provider.py
src/secret_rotator/rotators/: advanced_rotators.py  password_rotator.py
src/secret_rotator/tools/: manage_key_backups.py
src/secret_rotator/utils/: logger.py  retry.py
src/tools/: manage_key_backups.py
src/utils/: logger.py  retry.py
tests/: run_tests.py  test_backup_manager.py  test_file_provider.py  test_integration.py  test_password_rotator.py  test_retry_decorator.py  test_rotation_engine.py  test_scheduler.py  test_settings.py  test_web_interface.py
tools/: manage_key_backups.py
